Twentyfifteen companion style correction. Commit addresses an issue where the user avatar will be too wide just before small breakpoint cuts in.
See #6676

git-svn-id: https://buddypress.svn.wordpress.org/trunk@10292 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-templates/bp-legacy/css/twentyfifteen-rtl.css
+++ b/src/bp-templates/bp-legacy/css/twentyfifteen-rtl.css
@@ -969,7 +969,6 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 	.bp-user #buddypress #item-header #item-header-avatar img.avatar,
 	.bp-user #buddypress #item-header #item-header-avatar a {
 		float: right;
-		width: 100%;
 	}
 	.bp-user #buddypress #item-header #item-header-content {
 		float: left;
