--- a/src/bp-templates/bp-legacy/css/twentyfifteen.scss
+++ b/src/bp-templates/bp-legacy/css/twentyfifteen.scss
@@ -1214,7 +1214,6 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 					img.avatar,
 					a {
 						float: left;
-						width: 100%;
 					}
 				}
 
